@@ -1,3 +1,6 @@
+USER VISIBLE CHANGES BETWEEN CIAO-1.1.8 and CIAO-1.2.0
+=======================================================
+
 USER VISIBLE CHANGES BETWEEN CIAO-1.1.7 and CIAO-1.1.8
 =======================================================
 
